--- a/email-followup.html
+++ b/email-followup.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Oops, We're Working On It</title>
+    <title>We've Fixed It!</title>
     <style>
         /* -------------------------------------
         INLINED WITH htmlemail.io/inline
@@ -153,9 +153,11 @@
                                         <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;">
                                             <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Hi there,</p>
                                             <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">We recently detected that you encountered some poor audio quality during a call.
-                                                The CloudLink platform has automatically determined this is not an isolated
-                                                incident, and has notified the appropriate operations teams.</p>
-                                            <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">We hope you'll give us another chance while we work to resolve this issue.</p>
+                                                The CloudLink team just wants to let you know that we've implemented a fix
+                                                for the issue you experienced and everything should be back to normal. If
+                                                you continue to experience issues, please don't hestitate to contact your
+                                                vendor, or Mitel support.</p>
+                                            <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">We hope you'll give us another chance!</p>
                                             <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Click one of the links below to reinstall.</p>
                                             <tr>
                                                 <td align="left" style="font-family: sans-serif; font-size: 14px; vertical-align: top; padding-bottom: 15px;">
@@ -178,15 +180,28 @@
                                                 </td>
                                             </tr>
                                 </table>
-                                <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">We'll follow up by email when we've resolved the issue you experienced.</p>
                                 <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Thanks for using CloudLink!</p>
                                 <table width="520" border="0" align="center" cellpadding="20" cellspacing="0" style="text-align: center; background-color: #FFFFFF;">
                                     <tr>
                                         <td>
-                                            <p><i>Consider letting us know how you feel:</p></i>
+                                            <p>
+                                                <i>Consider letting us know how you feel:</p>
+                                            </i>
                                             <div class="rating">
-                                                <td><a href="https://cloudlink.wufoo.com/forms/z1mvbjx61hpda7c/def/field1=5" title="5"><img width="70%" src="https://emojipedia-us.s3.amazonaws.com/thumbs/120/apple/129/smiling-face-with-smiling-eyes_1f60a.png"/></a></td>
-                                                <td><a href="https://cloudlink.wufoo.com/forms/z1mvbjx61hpda7c/def/field1=1" title="1"><img width="70%" src="https://emojipedia-us.s3.amazonaws.com/thumbs/120/apple/129/disappointed-face_1f61e.png"/></a></td>
+                                                <td>
+                                                    <a href="https://cloudlink.wufoo.com/forms/z1mvbjx61hpda7c/def/field1=5"
+                                                        title="5">
+                                                        <img width="70%" src="https://emojipedia-us.s3.amazonaws.com/thumbs/120/apple/129/smiling-face-with-smiling-eyes_1f60a.png"
+                                                        />
+                                                    </a>
+                                                </td>
+                                                <td>
+                                                    <a href="https://cloudlink.wufoo.com/forms/z1mvbjx61hpda7c/def/field1=1"
+                                                        title="1">
+                                                        <img width="70%" src="https://emojipedia-us.s3.amazonaws.com/thumbs/120/apple/129/disappointed-face_1f61e.png"
+                                                        />
+                                                    </a>
+                                                </td>
                                             </div>
                                         </td>
                                     </tr>
