--- a/email-followup.html
+++ b/email-followup.html
@@ -156,7 +156,7 @@
                                                 The CloudLink team just wants to let you know that we've implemented a fix
                                                 for the issue you experienced and everything should be back to normal. If
                                                 you continue to experience issues, please don't hestitate to contact your
-                                                vendor, or Mitel support.</p>
+                                                vendor, or Mitel support either <a href="tel:+18005551234">by phone</a> or <a href="mailto:support@mitel.com">by email</a>.</p>
                                             <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">We hope you'll give us another chance!</p>
                                             <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Click one of the links below to reinstall.</p>
                                             <tr>
